--- a/Assigment_Pandas_(Day-11).ipynb
+++ b/Assigment_Pandas_(Day-11).ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1379,7 @@
        "57  UNDESA, Population Division ? World Urbanizati...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1498,7 @@
        "1  UNDESA, Population Division ? World Urbanizati...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,12 +1511,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <span style=\"color:blue\"> <p align=\"center\"> to see the lasst to rows of the data"
+    "##### <span style=\"color:blue\"> <p align=\"center\"> to see the last to rows of the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,7 @@
        "57  UNDESA, Population Division ? World Urbanizati...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,8 +1626,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:blue\"> <p align=\"center\"> to check the nature of data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1658,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,8 +1668,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:blue\"> <p align=\"center\"> to check the coulums heading"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1674,7 +1688,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1685,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1708,7 @@
        "RangeIndex(start=0, stop=58, step=1)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1704,8 +1718,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:blue\"> <p align=\"center\"> convert data in array"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1975,7 +1996,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1985,8 +2006,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:blue\"> <p align=\"center\"> to check the decription of the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2117,7 +2145,7 @@
        "max    127183.388000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2127,8 +2155,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:blue\"> <p align=\"center\"> to check the empty cell in the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2137,7 +2172,7 @@
        "False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2147,8 +2182,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:blue\"> <p align=\"center\"> to check the equal values in the data set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2395,7 +2437,7 @@
        "57  UNDESA, Population Division ? World Urbanizati...  >"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2405,8 +2447,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:blue\"> <p align=\"center\"> to sort out only desired column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2473,7 +2522,7 @@
        "Name: Element Code, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2483,8 +2532,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:blue\"> <p align=\"center\"> sort out desired row by index"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2650,7 +2706,7 @@
        "4                                                NaN  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2660,8 +2716,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:blue\"> <p align=\"center\"> to sort out desired column by index range"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3046,7 +3109,7 @@
        "57  Annual population        165"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3056,8 +3119,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:blue\"> <p align=\"center\"> to sort out desired rows by index range"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3157,7 +3227,7 @@
        "2  UNDESA, Population Division ? World Urbanizati...  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3167,8 +3237,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">>>## <span style=\"color:orange\"> <p align=\"center\"> Statistic"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3415,7 +3492,7 @@
        "57  UNDESA, Population Division ? World Urbanizati...  >"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3426,7 +3503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3441,7 +3518,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3454,12 +3531,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">>>## <span style=\"color:green\"> <p align=\"center\"> ***Plotting*** "
+    ">>>## <span style=\"color:orange\"> <p align=\"center\"> ***Plotting*** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:blue\"> <p align=\"center\"> Barplot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3482,8 +3566,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:blue\"> <p align=\"center\"> Barplot with hue"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3505,8 +3596,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:blue\"> <p align=\"center\"> effect of palette and saturation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
