--- a/Assigment_Pandas_(Day-11).ipynb
+++ b/Assigment_Pandas_(Day-11).ipynb
@@ -4,11 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> # <span style=\"color:blue\"> ***Participant***\n",
-    "> Title= \"Mr.\"\\\n",
-    "> Nmae= Naseer Muhammad Khan\\\n",
-    "> email= \"engrnaseer1@gmail.com\"\\\n",
-    "> Whatsapp= \"00923469198690\"\" </span>"
+    "# <p align=\"center\"> _**Pandas Practice (12-01-2022)**_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> # <span style=\"color:blue\"> <p align=\"center\"> ***Participant***\n",
+    "> \n",
+    "> <p align=\"center\"> Title= \"Mr.\"\n",
+    "> \n",
+    "> <p align=\"center\"> Name= Naseer Muhammad Khan\n",
+    "> \n",
+    "> <p align=\"center\"> email= \"engrnaseer1@gmail.com\"\n",
+    "> \n",
+    "> <p align=\"center\"> Whatsapp= \"00923469198690\"\" </span>"
    ]
   },
   {
